# Blossom

./: .gitignore  Blossom.cabal  CHANGELOG.md  README.md  blossom.toml
app/: Main.hs  Test.hs
docs/: Design.md  Goals.md
docs/Design/: CompilationPhases.md  Datatypes.md  Functions.md  Memory.md  README.md
example/: FizzBuzz.bl  HelloWorld.bl  IntTree.bl  README.md  Tree.bl
src/Blossom/: Cmd.hs  CodeGen.hs  Config.hs  Monad.hs  Package.hs  Rename.hs
src/Blossom/Backend/: Cpp.hs  LLVM.hs
src/Blossom/Backend/LLVM/: AST.hs  CodeGen.hs  ToLLVM.hs
src/Blossom/Common/: Arity.hs  Literal.hs  Name.hs  OStream.hs  Source.hs
src/Blossom/Common/Name/: Ident.hs  Module.hs
src/Blossom/Config/: CmdLine.hs  Config.hs  Verbosity.hs
src/Blossom/LLTree/: Body.hs  Closure.hs  Definition.hs  Info.hs  Module.hs  Name.hs  Type.hs
src/Blossom/Package/: Component.hs  Lexer.x  Package.hs  Parser.y  Properties.hs  Target.hs  Token.hs  Version.hs
src/Blossom/Package/Component/: Executable.hs  GenOpts.hs  Library.hs  Subpackage.hs
src/Blossom/Parsing/: AST.hs  AbsSynTree.hs  Lexer.x  Parser.y  SynTree.hs  Token.hs
src/Blossom/Resolver/: Errors.hs  Monad.hs  Resolver.hs
src/Blossom/Typing/: Type.hs  TypeEnv.hs
src/Text/: Pretty.hs
stdlib/Std/: Either.bl  Maybe.bl
test/Blossom/: CmdTest.hs  CodeGenTest.hs  RenameTest.hs
test/Blossom/Common/: NameTest.hs
test/Blossom/Common/Name/: ModuleTest.hs
test/Blossom/Config/: CmdLineTest.hs
test/Blossom/LLVM/: ToLLVMTest.hs
test/Blossom/Parsing/: LexerTest.hs  ParserTest.hs
