cabal-version:      2.4
name:               Blossom
version:            0.1.0.0
synopsis:           A functional programming language.
description:        A functional programming language.
license:            MIT
author:             Rose
maintainer:         71909018+Xenovia02@users.noreply.github.com
extra-source-files:
    LICENSE
    CHANGELOG.md
    README.md


common base-depends
    build-depends:
        base >= 4.14
    default-language:
        Haskell2010
    default-extensions:
        BangPatterns
    other-extensions:
        OverloadedStrings
    ghc-options:
        -fhide-source-paths
        -Wall
        -Wextra
        -Wcompat
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wno-unused-do-bind
        -Werror


library BlossomLib
    import:
        base-depends
    exposed-modules:
        Blossom.Backend.LLVM.AST,
        Blossom.Backend.LLVM.ToLLVM,
        Blossom.Cmd,
        Blossom.Common.Literal,
        Blossom.Common.Name,
        Blossom.LLTree.Body,
        Blossom.LLTree.Closure,
        Blossom.LLTree.Definition,
        Blossom.LLTree.Info,
        Blossom.LLTree.Module,
        Blossom.LLTree.Type,
        Blossom.Parsing.AbsSynTree,
        Blossom.Parsing.Lexer,
        Blossom.Parsing.Parser,
        Blossom.Parsing.Token
    build-tool-depends:
        alex:alex   >= 3.2,
        happy:happy >= 1.20
    -- some dependencies are commented out for convenience
    -- because they arent needed *yet*, but will be
    build-depends:
        -- array is needed specifically for Alex
        array                >= 0.5.4,
        bytestring           >= 0.10.12,
        -- containers           >= 0.6.5,
        -- directory            >= 0.10.12,
        -- filepath             >= 1.4.2,
        -- llvm-hs              >= 9.0.0,
        llvm-hs-pure         >= 9.0.0,
        -- mtl                  >= 2.2.2,
        optparse-applicative >= 0.17.0
    hs-source-dirs:
        src

executable Blossom
    import:
        base-depends
    main-is:
        Main.hs
    build-depends:
        BlossomLib
    hs-source-dirs:
        app
    ghc-options:
        -threaded

test-suite Test
    import:
        base-depends
    type:
        exitcode-stdio-1.0
    main-is:
        Test.hs
    other-modules:
        Blossom.LLVM.ToLLVMTest,
        Blossom.Common.NameTest,
        Blossom.Parsing.LexerTest,
        Blossom.Parsing.ParserTest
    hs-source-dirs:
        app,
        test
    build-depends:
        BlossomLib >= 0.1.0.0,
        bytestring >= 0.10.12,
        HUnit      >= 1.6.2.0
